--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "connect-redis": "^7.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.18.0",
     "googleapis": "^133.0.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
@@ -20,7 +22,9 @@
     "mysql2": "^3.9.1",
     "nodemailer": "^6.9.11",
     "nodemon": "^3.1.0",
+    "redis": "^4.6.13",
     "sequelize": "^6.37.1",
+    "session": "^0.1.0",
     "sweetalert2": "^11.10.6"
   }
 }
